--- a/blogpost4.html
+++ b/blogpost4.html
@@ -245,15 +245,14 @@
               <div class="space-container">
                 <div class="space-description-div" id="space-1">
                   <h3 class="space-description-heading container slider-reveal">
-                    Sample Heading
+                    Small - Scale Offices
                   </h3>
                   <div class="space-description-overlay">
                     <p class="space-description slider-reveal">
-                      Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                      Laudantium commodi velit repellendus ex. Aliquam
-                      dignissimos iste quasi ab pariatur beatae nemo harum,
-                      nihil maiores, totam vero dolorem quisquam odit
-                      architecto.
+                      Small-scale offices are often budget-friendly and easier
+                      to maintain, making them ideal for businesses seeking an
+                      intimate, agile workspace where communication flows
+                      naturally among team members.
                     </p>
                   </div>
                 </div>
@@ -288,15 +287,14 @@
               <div class="space-container">
                 <div class="space-description-div" id="space-2">
                   <h3 class="space-description-heading container slider-reveal">
-                    Sample Heading
+                    Intermediate - Scale Offices
                   </h3>
                   <div class="space-description-overlay">
                     <p class="space-description slider-reveal">
-                      Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                      Laudantium commodi velit repellendus ex. Aliquam
-                      dignissimos iste quasi ab pariatur beatae nemo harum,
-                      nihil maiores, totam vero dolorem quisquam odit
-                      architecto.
+                      Intermediate-scale offices prioritize adaptable layouts to
+                      accommodate growth and foster a close-knit work
+                      environment, while also providing essential amenities like
+                      shared kitchens, lounges, and technology infrastructure.
                     </p>
                   </div>
                 </div>
@@ -330,15 +328,15 @@
               <div class="space-container">
                 <div class="space-description-div" id="space-3">
                   <h3 class="space-description-heading container slider-reveal">
-                    Sample Heading
+                    Medium - Scale Offices
                   </h3>
                   <div class="space-description-overlay">
                     <p class="space-description slider-reveal">
-                      Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                      Laudantium commodi velit repellendus ex. Aliquam
-                      dignissimos iste quasi ab pariatur beatae nemo harum,
-                      nihil maiores, totam vero dolorem quisquam odit
-                      architecto.
+                      These offer a balance between a personal workspace feel and the
+                      infrastructure required to support larger teams. These
+                      offices typically feature a blend of open-plan areas,
+                      private offices, and meeting rooms that allow for both
+                      collaborative and focused work.
                     </p>
                   </div>
                 </div>
@@ -372,15 +370,13 @@
               <div class="space-container">
                 <div class="space-description-div" id="space-4">
                   <h3 class="space-description-heading container slider-reveal">
-                    Sample Heading
+                    Large - Scale Offices
                   </h3>
                   <div class="space-description-overlay">
                     <p class="space-description slider-reveal">
-                      Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                      Laudantium commodi velit repellendus ex. Aliquam
-                      dignissimos iste quasi ab pariatur beatae nemo harum,
-                      nihil maiores, totam vero dolorem quisquam odit
-                      architecto.
+                      Large offices include open-plan layouts to foster
+                      communication, along with private meeting rooms, break
+                      areas, and sometimes wellness zones for relaxation.
                     </p>
                   </div>
                 </div>
@@ -445,7 +441,7 @@
           }
           .space-container {
             display: grid;
-            padding-bottom: 10rem;
+            padding-bottom: 15rem;
           }
           .space-container {
             grid-template-columns: 1fr;
@@ -809,7 +805,10 @@
                 alt=""
                 class="seperator"
               />
-              <a href="indexLayout.html" class="btn btn-secondary calculator-btn">
+              <a
+                href="indexLayout.html"
+                class="btn btn-secondary calculator-btn"
+              >
                 <span class="text text-1">Make Your Space</span>
 
                 <span class="text text-2" aria-hidden="true"
@@ -848,7 +847,8 @@
             padding-bottom: 10rem;
           }
           .marketing-container {
-            grid-template-columns: 1fr; min-height: max-content;
+            grid-template-columns: 1fr;
+            min-height: max-content;
           }
           @media (min-width: 600px) {
             .marketing-container {
