Updating Routes in Header

--- a/blogpost4.html
+++ b/blogpost4.html
@@ -124,7 +124,7 @@
 
     <header class="header" data-header>
       <div class="container">
-        <a href="#" class="logo">
+        <a href="index.html#" class="logo">
           <img
             src="./assets/images/603logo (1).avif"
             width="160"
@@ -138,7 +138,7 @@
             <ion-icon name="close-outline" aria-hidden="true"></ion-icon>
           </button>
 
-          <a href="#" class="logo">
+          <a href="index.html#" class="logo">
             <img
               src="./assets/images/603logo (1).avif"
               width="160"
@@ -149,7 +149,10 @@
 
           <ul class="navbar-list">
             <li class="navbar-item">
-              <a href="#home" class="navbar-link hover-underline active">
+              <a
+                href="index.html#home"
+                class="navbar-link hover-underline active"
+              >
                 <div class="separator"></div>
 
                 <span class="span">Home</span>
@@ -157,21 +160,21 @@
             </li>
 
             <li class="navbar-item">
-              <a href="#menu" class="navbar-link hover-underline">
+              <a href="blogpost4.html" class="navbar-link hover-underline">
                 <div class="separator"></div>
                 <span class="span">Spaces</span>
               </a>
             </li>
 
             <li class="navbar-item">
-              <a href="#about" class="navbar-link hover-underline">
+              <a href="index.html#about" class="navbar-link hover-underline">
                 <div class="separator"></div>
                 <span class="span">About Us</span>
               </a>
             </li>
 
             <li class="navbar-item">
-              <a href="#" class="navbar-link hover-underline">
+              <a href="index.html#images" class="navbar-link hover-underline">
                 <div class="separator"></div>
                 <span class="span">Images</span>
               </a>
@@ -231,8 +234,6 @@
           <span class="line line-2"></span>
           <span class="line line-3"></span>
         </button>
-
-        <div class="overlay" data-nav-toggler data-overlay></div>
       </div>
     </header>
 
@@ -332,11 +333,11 @@
                   </h3>
                   <div class="space-description-overlay">
                     <p class="space-description slider-reveal">
-                      These offer a balance between a personal workspace feel and the
-                      infrastructure required to support larger teams. These
-                      offices typically feature a blend of open-plan areas,
-                      private offices, and meeting rooms that allow for both
-                      collaborative and focused work.
+                      These offer a balance between a personal workspace feel
+                      and the infrastructure required to support larger teams.
+                      These offices typically feature a blend of open-plan
+                      areas, private offices, and meeting rooms that allow for
+                      both collaborative and focused work.
                     </p>
                   </div>
                 </div>
