--- a/index.html
+++ b/index.html
@@ -125,63 +125,63 @@
   <header class="header" data-header>
     <div class="container">
 
-      <a href="#" class="logo">
-        <!-- <img src="./assets/images/603logo (1).avif" width="160" height="50" alt="Grilli - Home"> -->
-         
-        <img class="Sirv" src="https://abhiram.sirv.com/609%20Workved/assets/603logo%20(1).avif?format=webp" width="160" height="50" alt="Grilli - Home">
+      <a href="index.html#" class="logo">
+        <img src="./assets/images/603logo (1).avif" width="160" height="50" alt="Grilli - Home">
       </a>
 
       <nav class="navbar" data-navbar>
 
-        <button class="close-btn" aria-label="close menu" data-nav-toggler>
+          <button class="close-btn" aria-label="close menu" data-nav-toggler>
           <ion-icon name="close-outline" aria-hidden="true"></ion-icon>
-        </button>
+          </button>
 
-        <a href="#" class="logo">
-          <!-- <img src="./assets/images/603logo (1).avif" width="160" height="50" alt="Grilli - Home"> -->
+          <a href="index.html#" class="logo">
+          <img src="./assets/images/603logo (1).avif" width="160" height="50" alt="Grilli - Home">
+          </a>
 
-          <img src="https://abhiram.sirv.com/609%20Workved/assets/603logo%20(1).avif?format=webp" width="160" height="50" alt="Grilli - Home">
-        </a>
+          <ul class="navbar-list">
 
-        <ul class="navbar-list">
+            <li class="navbar-item">
+              <a href="index.html#home" class="navbar-link hover-underline active">
+                <div class="separator"></div>
 
-          <li class="navbar-item">
-            <a href="#home" class="navbar-link hover-underline active">
-              <div class="separator"></div>
+                <span class="span">Home</span>
+              </a>
+            </li>
 
-              <span class="span newSpan">Home</span>
-            </a>
-          </li>
+            <li class="navbar-item">
+              <a href="blogpost4.html" class="navbar-link hover-underline">
+                <div class="separator"></div>
+                <span class="span">Spaces</span>
+              </a>
+            </li>
 
-          <li class="navbar-item">
-            <a href="#menu" class="navbar-link hover-underline">
-              <div class="separator"></div>
+            <li class="navbar-item">
+              <a href="index.html#about" class="navbar-link hover-underline">
+                <div class="separator"></div>
+                <span class="span">About Us</span>
+              </a>
+            </li>
 
-              <span class="span newSpan">Spaces</span>
-            </a>
-          </li>
-
-          <li class="navbar-item">
-            <a href="#about" class="navbar-link hover-underline">
-              <div class="separator"></div>
-
-              <span class="span newSpan">About Us</span>
-            </a>
-          </li>
-
-          <li class="navbar-item">
-            <a href="#images" class="navbar-link hover-underline">
-              <div class="separator"></div>
-
-              <span class="span newSpan">Images</span>
-            </a>
-          </li>
+            <li class="navbar-item">
+              <a href="index.html#images" class="navbar-link hover-underline">
+                <div class="separator"></div>
+                <span class="span">Images</span>
+              </a>
+            </li>
+          
+            <li class="navbar-item">
+              <a href="blogs.html" class="navbar-link hover-underline">
+                <div class="separator"></div>
+                <span class="span">Blogs</span>
+              </a>
+            </li>
 
           <li class="navbar-item">
             <a href="#" class="navbar-link hover-underline">
               <div class="separator"></div>
 
-              <span class="span newSpan">Contact</span>
+              <span class="span">Contact</span>
             </a>
           </li>
 
@@ -221,8 +221,6 @@
         <span class="line line-2"></span>
         <span class="line line-3"></span>
       </button>
-
-      <div class="overlay" data-nav-toggler data-overlay></div>
 
     </div>
   </header>
