Added scroll-based animations for enhanced user interaction

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 
       <nav class="navbar" data-navbar>
 
-          <button class="close-btn" aria-label="close menu" data-nav-toggler>
+          <button class="close-btn scale-up" aria-label="close menu" data-nav-toggler>
           <ion-icon name="close-outline" aria-hidden="true"></ion-icon>
           </button>
 
@@ -210,13 +210,13 @@
 
       </nav>
 
-      <a href="indexLayout.html" class="btn btn-secondary">
+      <a href="indexLayout.html" class="btn btn-secondary scale-up">
         <span class="text text-1">Make Your Space</span>
 
         <span class="text text-2" aria-hidden="true">Make Your Space</span>
       </a>
 
-      <button class="nav-open-btn" aria-label="open menu" data-nav-toggler>
+      <button class="nav-open-btn scale-up" aria-label="open menu" data-nav-toggler>
         <span class="line line-1"></span>
         <span class="line line-2"></span>
         <span class="line line-3"></span>
@@ -286,7 +286,7 @@
               Spaces that are occupied by Corporates and Start ups, designed with your business in mind
             </p>
 
-            <a href="#" class="btn btn-primary slider-reveal">
+            <a href="#" class="btn btn-primary slider-reveal scale-up">
               <span class="text text-1 newHero">Make Your Space</span>
 
               <span class="text text-2 newHero" aria-hidden="true">Make Your Space</span>
@@ -314,7 +314,7 @@
               Come with your team & experience the joy of inspiring office design.
             </p>
 
-            <a href="#" class="btn btn-primary slider-reveal">
+            <a href="#" class="btn btn-primary slider-reveal scale-up">
               <span class="text text-1 newHero">Make Your Space</span>
 
               <span class="text text-2 newHero" aria-hidden="true">Make Your Space</span>
@@ -324,15 +324,15 @@
 
         </ul>
        </div>
-        <button class="slider-btn prev" aria-label="slide to previous" data-prev-btn>
+        <button class="slider-btn prev scale-up " aria-label="slide to previous" data-prev-btn>
           <ion-icon name="chevron-back"></ion-icon>
         </button>
 
-        <button class="slider-btn next" aria-label="slide to next" data-next-btn>
+        <button class="slider-btn next scale-up" aria-label="slide to next" data-next-btn>
           <ion-icon name="chevron-forward"></ion-icon>
         </button>
 
-        <a href="indexLayout.html" class="hero-btn has-after">
+        <a href="indexLayout.html" class="hero-btn has-after scale-up">
           <!-- <img src="./assets/images/hero-icon.png" width="48" height="48" alt="booking icon"> -->
 
           <img src="https://abhiram.sirv.com/609%20Workved/assets/hero-icon.png?format=webp" width="48" height="48" alt="booking icon">
@@ -353,11 +353,11 @@
       <section class="section service bg-black-10 text-center" aria-label="service" id="menu">
         <div class="container">
 
-          <p class="section-subtitle label-2">Luxurious Office Interiors</p>
+          <p class="section-subtitle label-2 scale-up">Luxurious Office Interiors</p>
 
-          <h2 class="headline-1 section-title">We Offer Top Notch</h2>
+          <h2 class="headline-1 section-title scale-up">We Offer Top Notch</h2>
 
-          <p class="section-text">
+          <p class="section-text scale-up">
             Elevate your workspace with our luxurious office interiors, where sophistication meets functionality.
             Crafted with premium materials, sleek finishes, and tailored designs, each space exudes elegance and professionalism.
           </p>
@@ -365,7 +365,7 @@
           <ul class="grid-list">
 
             <li>
-              <div class="service-card">
+              <div class="service-card slide-in">
 
                 <a href="#" class="has-before hover:shine">
                   <figure class="card-banner img-holder" style="--width: 285; --height: 336;">
@@ -384,7 +384,7 @@
                     <a href="#">Meeting Room</a>
                   </h3>
 
-                  <a href="#" class="btn-text hover-underline label-2">View Space</a>
+                  <a href="#" class="btn-text hover-underline label-2 scale-up">View Space</a>
 
                 </div>
 
@@ -392,7 +392,7 @@
             </li>
 
             <li>
-              <div class="service-card">
+              <div class="service-card slide-in">
 
                 <a href="#" class="has-before hover:shine">
                   <figure class="card-banner img-holder" style="--width: 285; --height: 336;">
@@ -410,7 +410,7 @@
                     <a href="#">Appetizers</a>
                   </h3>
 
-                  <a href="#" class="btn-text hover-underline label-2">View Space</a>
+                  <a href="#" class="btn-text hover-underline label-2 scale-up">View Space</a>
 
                 </div>
 
@@ -418,7 +418,7 @@
             </li>
 
             <li>
-              <div class="service-card">
+              <div class="service-card slide-in">
 
                 <a href="#" class="has-before hover:shine">
                   <figure class="card-banner img-holder" style="--width: 285; --height: 336;">
@@ -436,7 +436,7 @@
                     <a href="#">Manager Desk</a>
                   </h3>
 
-                  <a href="#" class="btn-text hover-underline label-2">View Space</a>
+                  <a href="#" class="btn-text hover-underline label-2 scale-up">View Space</a>
 
                 </div>
 
@@ -464,7 +464,7 @@
       <section class="section about text-center" aria-labelledby="about-label" id="about">
         <div class="container">
 
-          <div class="about-content">
+          <div class="about-content scale-up">
 
             <p class="label-2 section-subtitle" id="about-label">Our Story</p>
 
@@ -482,7 +482,7 @@
             <a href="tel:+804001234567" class="body-1 contact-number hover-underline">	
               +91 9136036603</a>
 
-            <a href="#" class="btn btn-primary">
+            <a href="#" class="btn btn-primary scale-up">
               <span class="text text-1">Read More</span>
 
               <span class="text text-2" aria-hidden="true">Read More</span>
@@ -490,7 +490,7 @@
 
           </div>
 
-          <figure class="about-banner">
+          <figure class="about-banner fade-in">
 
             <!-- <img src="./assets/images/Untitled20-202024-05-14T202107.959.jpg" width="570" height="570" loading="lazy" alt="about banner"
               class="w-100" data-parallax-item data-parallax-speed="1"> -->
@@ -533,7 +533,7 @@
         - #TESTIMONIALS
       -->
 
-      <section class="section testi text-center has-bg-image"
+      <section class="section testi text-center has-bg-image fade-in"
         style="background-image: url('./assets/images/uneebo-office-design-UgYT5nkXdK4-unsplash.avif');" aria-label="testimonials">
   <div class="container" style="position: relative; z-index: 1;">
 
@@ -607,14 +607,14 @@
       <section class="section event bg-black-10" aria-label="event" id="images">
         <div class="container">
 
-          <p class="section-subtitle label-2 text-center">Recent Updates</p>
+          <p class="section-subtitle label-2 text-center scale-up">Recent Updates</p>
 
-          <h2 class="section-title headline-1 text-center">Upcoming Offices </h2>
+          <h2 class="section-title headline-1 text-center scale-up">Upcoming Offices </h2>
 
           <ul class="grid-list">
 
             <li>
-              <div class="event-card has-before hover:shine">
+              <div class="event-card has-before hover:shine scale-up">
 
                 <div class="card-banner img-holder" style="--width: 350; --height: 450;">
                   <!-- <img src="./assets/images/copernico-p_kICQCOM4s-unsplash (1).avif" width="350" height="450" loading="lazy"
@@ -638,7 +638,7 @@
             </li>
 
             <li>
-              <div class="event-card has-before hover:shine">
+              <div class="event-card has-before hover:shine scale-up">
 
                 <div class="card-banner img-holder" style="--width: 350; --height: 450;">
                   <!-- <img src="./assets/images/google-oc-rapt-studio-office-design-9-700x467.avif" width="350" height="450" loading="lazy"
@@ -662,7 +662,7 @@
             </li>
 
             <li>
-              <div class="event-card has-before hover:shine">
+              <div class="event-card has-before hover:shine scale-up">
 
                 <div class="card-banner img-holder" style="--width: 350; --height: 450;">
                   <!-- <img src="./assets/images/jose-losada-DyFjxmHt3Es-unsplash.avif" width="350" height="450" loading="lazy"
@@ -687,7 +687,7 @@
 
           </ul>
 
-          <a href="#" class="btn btn-primary">
+          <a href="#" class="btn btn-primary scale-up">
             <span class="text text-1">Check Out BOQ</span>
 
             <span class="text text-2" aria-hidden="true">Check Out BOQ</span>
@@ -707,7 +707,7 @@
     - #FOOTER
   -->
 
-  <footer class="footer section has-bg-image text-center"
+  <footer class="footer section has-bg-image text-center fade-in"
     style="background-image: url('./assets/images/fae955e3-de29-4d6b-a41a-85563f86a931.avif')">
     <div class="container">
 
@@ -752,7 +752,7 @@
               <input type="email" name="email_address" placeholder="Your email" autocomplete="off" class="input-field">
             </div>
 
-            <button type="submit" class="btn btn-secondary">
+            <button type="submit" class="btn btn-secondary scale-up">
               <span class="text text-1">Subscribe</span>
 
               <span class="text text-2" aria-hidden="true">Subscribe</span>
@@ -819,7 +819,7 @@
     - #BACK TO TOP
   -->
 
-  <a href="#top" class="back-top-btn active" aria-label="back to top" data-back-top-btn>
+  <a href="#top" class="back-top-btn active scale-up" aria-label="back to top" data-back-top-btn>
     <ion-icon name="chevron-up" aria-hidden="true"></ion-icon>
   </a>
 
