Header Routes Update

--- a/about.html
+++ b/about.html
@@ -134,7 +134,11 @@
         </a>
 
         <nav class="navbar" data-navbar>
-          <button class="close-btn" aria-label="close menu" data-nav-toggler>
+          <button
+            class="close-btn scale-up"
+            aria-label="close menu"
+            data-nav-toggler
+          >
             <ion-icon name="close-outline" aria-hidden="true"></ion-icon>
           </button>
 
@@ -167,7 +171,7 @@
             </li>
 
             <li class="navbar-item">
-              <a href="index.html#about" class="navbar-link hover-underline">
+              <a href="about.html" class="navbar-link hover-underline">
                 <div class="separator"></div>
                 <span class="span">About Us</span>
               </a>
@@ -223,13 +227,17 @@
           </div>
         </nav>
 
-        <a href="indexLayout.html" class="btn btn-secondary">
+        <a href="indexLayout.html" class="btn btn-secondary scale-up">
           <span class="text text-1">Make Your Space</span>
 
           <span class="text text-2" aria-hidden="true">Make Your Space</span>
         </a>
 
-        <button class="nav-open-btn" aria-label="open menu" data-nav-toggler>
+        <button
+          class="nav-open-btn scale-up"
+          aria-label="open menu"
+          data-nav-toggler
+        >
           <span class="line line-1"></span>
           <span class="line line-2"></span>
           <span class="line line-3"></span>
@@ -465,9 +473,9 @@
                 class="team-img"
               />
               <p class="container team-description">
-                <b>XYZ</b>Known for their wealth of experience in interior design and
-                project management, guiding the team with a blend of strategic
-                insight and creative enthusiasm and their ability to
+                <b>XYZ</b>Known for their wealth of experience in interior
+                design and project management, guiding the team with a blend of
+                strategic insight and creative enthusiasm and their ability to
                 inspire collaboration and maintain the highest standards, They
                 ensure every project is both beautifully crafted and efficiently
                 executed.
@@ -483,13 +491,13 @@
                 class="team-img"
               />
               <p class="container team-description">
-                <b>XYZ</b>The creative strategist behind our brand's
-                presence, bringing a deep understanding of market trends and a
-                passion for storytelling. With a talent for building meaningful
-                connections and a keen sense for design-driven marketing, they
-                ensure our work reaches and resonates with the right audience.
-                Their innovative campaigns and strategic vision help our studio
-                stand out, creating lasting impressions and driving growth in a
+                <b>XYZ</b>The creative strategist behind our brand's presence,
+                bringing a deep understanding of market trends and a passion for
+                storytelling. With a talent for building meaningful connections
+                and a keen sense for design-driven marketing, they ensure our
+                work reaches and resonates with the right audience. Their
+                innovative campaigns and strategic vision help our studio stand
+                out, creating lasting impressions and driving growth in a
                 competitive landscape.
               </p>
             </div>
