--- a/blogpost2.html
+++ b/blogpost2.html
@@ -116,7 +116,7 @@
 
       <nav class="navbar" data-navbar>
 
-          <button class="close-btn" aria-label="close menu" data-nav-toggler>
+          <button class="close-btn scale-up" aria-label="close menu" data-nav-toggler>
           <ion-icon name="close-outline" aria-hidden="true"></ion-icon>
           </button>
 
@@ -142,7 +142,7 @@
             </li>
 
             <li class="navbar-item">
-              <a href="index.html#about" class="navbar-link hover-underline">
+              <a href="about.html" class="navbar-link hover-underline">
                 <div class="separator"></div>
                 <span class="span">About Us</span>
               </a>
@@ -195,13 +195,13 @@
 
       </nav>
 
-      <a href="indexLayout.html" class="btn btn-secondary">
+      <a href="indexLayout.html" class="btn btn-secondary scale-up">
         <span class="text text-1">Make Your Space</span>
 
         <span class="text text-2" aria-hidden="true">Make Your Space</span>
       </a>
 
-      <button class="nav-open-btn" aria-label="open menu" data-nav-toggler>
+      <button class="nav-open-btn scale-up" aria-label="open menu" data-nav-toggler>
         <span class="line line-1"></span>
         <span class="line line-2"></span>
         <span class="line line-3"></span>
@@ -209,6 +209,7 @@
 
     </div>
   </header>
+
 
 
 
