--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
             </li>
 
             <li class="navbar-item">
-              <a href="index.html#about" class="navbar-link hover-underline">
+              <a href="about.html" class="navbar-link hover-underline">
                 <div class="separator"></div>
                 <span class="span">About Us</span>
               </a>
